--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<a href="https://docs.google.com/spreadsheets/d/1Psd3FAxVGsfV7aLiVqtFAv140VqM2c0y3h3rjC3AcNM/edit#gid=0" class="lnk" title="Chart by DemoDraco">Wing Materials Chart</a><br />
 				<a href="https://docs.google.com/spreadsheets/d/1dO2jRfS85iE2UIWWNLerA7hA4Y3-rZRCU0i3Ho5jv1M/edit" class="lnk" title="Chart by DemoDraco">Cannon Materials Chart</a><br />
 				<a href="https://docs.google.com/spreadsheets/d/1fPpHFB3kPaV6LNJoWZET1ooEoZSSgy_hbBXfBHCwFGs/edit#gid=0" class="lnk" title="Chart by DemoDraco">Sky Core Materials Chart</a><br />
-				
+				<a href="skycore.html" class="lnk">Skycore Calculator</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="lnk" style="color:#889;border: 2px solid #889; padding: 3px 4px 0">OC</a><br /><br />
 			</p>
 		</span>
 			<span class="cat">
