--- a/skycore.html
+++ b/skycore.html
@@ -29,7 +29,7 @@
       <option value="silver">Silver</option>
       <option value="gold">Gold</option>
     </select><br /><br />
-    <input class="otpt" id="mass" placeholder="Weight of Skycore"><br />
-    <input class="otpt" id="lift" placeholder="Total lift capacity">
+    <input class="otpt" id="mass" placeholder="Weight of Skycore" disabled><br />
+    <input class="otpt" id="lift" placeholder="Total lift capacity" disabled>
   </body>
 <html>
