--- a/skycore.html
+++ b/skycore.html
@@ -7,8 +7,9 @@
 	<body>
 		<script src="skycoreCalc.js"></script>
     <h2>Skycore Calculator</h2>
-    <p>Casing: </p>
+
     <select title="The casing of the Skycore. This doesn't change the lift capacity">
+      <option selected disabled>Casing Material</option>
       <option value=".26">Aluminum</option>
       <option value=".30">Titanium</option>
       <option value=".34">Tin</option>
@@ -22,8 +23,8 @@
       <option value=".69">Gold</option>
       <option value=".74">Tungsten</option>
     </select><br />
-    <p>Generator: </p>
     <select title="The generator. Good conductors = good Skycore">
+      <option selected disabled>Generator Material</option>
       <option value="aluminum">Aluminum</option>
       <option value="copper">Copper</option>
       <option value="silver">Silver</option>
