--- a/skycore.html
+++ b/skycore.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<script src="skycoreCalc.js"></script>
-    <h2 style="margin: 16px;">Skycore Calculator</h2>
+    <h2 style="margin: 16px;">Skycore Calculator</h2><br />
     <select title="The casing of the Skycore. This doesn't change the lift capacity">
       <option selected disabled>Casing Material</option>
       <option value=".26">Aluminum</option>
