--- a/skycore.html
+++ b/skycore.html
@@ -7,7 +7,7 @@
 	<body>
 		<script src="skycoreCalc.js"></script>
     <h2 style="margin: 16px;">Skycore Calculator</h2>
-    <select title="The casing of the Skycore. This doesn't change the lift capacity">
+    <select title="The casing of the Skycore. This doesn't change the lift capacity" id="casing">
       <option selected disabled>Casing Material</option>
       <option value=".26">Aluminum</option>
       <option value=".30">Titanium</option>
@@ -22,7 +22,7 @@
       <option value=".69">Gold</option>
       <option value=".74">Tungsten</option>
     </select>
-    <select title="The generator. Good conductors = good Skycore">
+    <select title="The generator. Good conductors = good Skycore" id="generator">
       <option selected disabled>Generator Material</option>
       <option value="aluminum">Aluminum</option>
       <option value="copper">Copper</option>
