--- a/skycore.html
+++ b/skycore.html
@@ -8,7 +8,7 @@
 		<script src="skycoreCalc.js"></script>
     <h2 style="margin: 16px;">Skycore Calculator</h2>
     <select title="The casing of the Skycore. This doesn't change the lift capacity" id="casing">
-      <option selected disabled>Casing Material</option>
+      <option selected disabled value="0">Casing Material</option>
       <option value=".26">Aluminum</option>
       <option value=".30">Titanium</option>
       <option value=".34">Tin</option>
@@ -23,7 +23,7 @@
       <option value=".74">Tungsten</option>
     </select>
     <select title="The generator. Good conductors = good Skycore" id="generator">
-      <option selected disabled>Generator Material</option>
+      <option selected disabled value="n/a">Generator Material</option>
       <option value="aluminum">Aluminum</option>
       <option value="copper">Copper</option>
       <option value="silver">Silver</option>
