--- a/skycore.html
+++ b/skycore.html
@@ -31,7 +31,7 @@
 	</select>
 		<br />
 		<h2 style="margin: 16px;">Output:</h2>
-    <input class="otpt" id="mass" placeholder="Weight of Skycore" disabled><br />
+    <input class="otpt" id="mass" placeholder="Weight" disabled><br />
     <input class="otpt" id="lift" placeholder="Total lift capacity" disabled>
   </body>
 <html>
