--- a/skycore.html
+++ b/skycore.html
@@ -32,6 +32,6 @@
 		<br />
 		<h2 style="margin: 16px;">Output:</h2>
     <input class="otpt" id="mass" placeholder="Weight" disabled><br />
-    <input class="otpt" id="lift" placeholder="Total lift capacity" disabled>
+    <input class="otpt" id="lift" placeholder="Lift capacity" disabled>
   </body>
 <html>
