--- a/skycore.html
+++ b/skycore.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <link href="https://fonts.googleapis.com/css?family=Cinzel|Crimson+Text|EB+Garamond|IM+Fell+English+SC|Josefin+Sans" rel="stylesheet">
+	<title>Skycore Calculator</title>
+  	<link href="https://fonts.googleapis.com/css?family=Cinzel|Crimson+Text|EB+Garamond|IM+Fell+English+SC|Josefin+Sans" rel="stylesheet">
 	<link href="shared_styles.css" rel="stylesheet">
 	</head>
 	<body>
@@ -32,6 +33,7 @@
 		<br />
 		<h2 style="margin: 16px;">Output:</h2>
     <input class="otpt" id="mass" placeholder="Weight" disabled><br />
-    <input class="otpt" id="lift" placeholder="Lift capacity" disabled>
+    <input class="otpt" id="lift" placeholder="Lift capacity*" disabled>
+    <p>*assuming Q10 materials</p>
   </body>
 <html>
