--- a/skycore.html
+++ b/skycore.html
@@ -22,14 +22,15 @@
       <option value=".60">Lead</option>
       <option value=".69">Gold</option>
       <option value=".74">Tungsten</option>
-    </select>
+    </select><input type='text' id='caseQ' placeholder='Quality' class="inpt">
+		<br />
     <select title="The generator. Good conductors = good Skycore" id="generator">
       <option selected disabled value="n/a">Generator Material</option>
       <option value="aluminum">Aluminum</option>
       <option value="copper">Copper</option>
       <option value="silver">Silver</option>
       <option value="gold">Gold</option>
-	</select>
+	</select><input type='text' id='genQ' placeholder='Quality' class="inpt">
 		<br />
 		<h2 style="margin: 16px;">Output:</h2>
     <input class="otpt" id="mass" placeholder="Weight" disabled><br />
