--- a/skycore.html
+++ b/skycore.html
@@ -34,7 +34,6 @@
 		<br />
 		<h2 style="margin: 16px;">Output:</h2>
     <input class="otpt" id="mass" placeholder="Weight" disabled><br />
-    <input class="otpt" id="lift" placeholder="Lift capacity*" disabled>
-    <p>*assuming Q10 materials</p>
+    <input class="otpt" id="lift" placeholder="Lift capacity" disabled>
   </body>
 <html>
