--- a/skycore.html
+++ b/skycore.html
@@ -22,7 +22,7 @@
       <option value=".60">Lead</option>
       <option value=".69">Gold</option>
       <option value=".74">Tungsten</option>
-    </select><input type='text' id='caseQ' placeholder='Quality' class="inpt">
+    </select>
 		<br />
     <select title="The generator. Good conductors = good Skycore" id="generator">
       <option selected disabled value="n/a">Generator Material</option>
