--- a/skycore.html
+++ b/skycore.html
@@ -30,7 +30,7 @@
       <option value="copper">Copper</option>
       <option value="silver">Silver</option>
       <option value="gold">Gold</option>
-	</select><input type='text' id='genQ' placeholder='Quality' class="inpt">
+	</select><input type='number' id='genQ' placeholder='Quality' class="inpt" min="1" max="10">
 		<br />
 		<h2 style="margin: 16px;">Output:</h2>
     <input class="otpt" id="mass" placeholder="Weight" disabled><br />
