--- a/skycore.html
+++ b/skycore.html
@@ -7,6 +7,18 @@
 	</head>
 	<body>
 		<script src="skycoreCalc.js"></script>
+    <select title="The type of skycore" id="type">
+      <option selected disabled value="0">Skycore Type</option>
+      <option value="1000">Sky Core</option>
+      <option value="400">Atlas Enhancer</option>
+      <option value="400">Generator</option>
+      <option value="600">Air Filter</option>
+      <option value="600">Coolant System</option>
+      <option value="600">Stabiliser</option>
+      <option value="800">Computer</option>
+      <option value="800">Cirtuitry Network</option>
+      <option value="800">Efficiency Module</option>
+    </select><br />
     <h2 style="margin: 16px;">Skycore Calculator</h2>
     <select title="The casing of the Skycore. This doesn't change the lift capacity" id="casing">
       <option selected disabled value="0">Casing Material</option>
