--- a/skycore.html
+++ b/skycore.html
@@ -46,7 +46,7 @@
 	</select><input type='number' id='genQ' placeholder='Quality' class="inpt" min="1" max="10">
 		<br />
 		<h2 style="margin: 16px;">Output:</h2>
-    <input class="otpt" id="mass" placeholder="Weight" disabled><br />
+    <input class="otpt" id="mass" placeholder="Weight: 0.00kg" disabled><br />
     <input class="otpt" id="lift" placeholder="Lift capacity" disabled>
   </body>
 <html>
