--- a/skycore.html
+++ b/skycore.html
@@ -9,7 +9,7 @@
 		<script src="skycoreCalc.js"></script>
     
     <h2 style="margin: 16px;">Skycore Calculator</h2>
-    <select title="The type of skycore" id="type">
+    <!--<select title="The type of skycore" id="type">
       <option selected disabled value="0">Skycore Type</option>
       <option value="1000">Sky Core</option>
       <option value="400">Atlas Enhancer</option>
@@ -20,7 +20,7 @@
       <option value="800">Computer</option>
       <option value="800">Cirtuitry Network</option>
       <option value="800">Efficiency Module</option>
-    </select><br />
+    </select><br />-->
     <select title="The casing of the Skycore. This doesn't change the lift capacity" id="casing">
       <option selected disabled value="0">Casing Material</option>
       <option value=".26">Aluminum</option>
