--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html><head>
 		<link href="https://fonts.googleapis.com/css?family=Cinzel|Crimson+Text|EB+Garamond|IM+Fell+English+SC|Josefin+Sans" rel="stylesheet">
 		<link href="shared_styles.css" rel="stylesheet">
+		<title>Worlds Adrift</title>
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<script>
 			(adsbygoogle = window.adsbygoogle || []).push({
