--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Cinzel|Crimson+Text|EB+Garamond|IM+Fell+English+SC|Josefin+Sans" rel="stylesheet">
 		<link href="shared_styles.css" rel="stylesheet">
 		<title>Worlds Adrift</title>
+		<link rel="shortcut icon" href="favicon.ico" />
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<script>
 			(adsbygoogle = window.adsbygoogle || []).push({
