--- a/shipspeed.html
+++ b/shipspeed.html
@@ -2,6 +2,8 @@
 <html><head>
 		<link href="https://fonts.googleapis.com/css?family=Cinzel|Crimson+Text|EB+Garamond|IM+Fell+English+SC|Josefin+Sans" rel="stylesheet">
 		<link href="shared_styles.css" rel="stylesheet">
+		<title>Worlds Adrift</title>
+		<link rel="shortcut icon" href="favicon.ico" />
 		
 	</head>
 	<body>
