--- a/fuel.html
+++ b/fuel.html
@@ -2,7 +2,7 @@
 <html><head>
 		<link href="https://fonts.googleapis.com/css?family=Cinzel|Crimson+Text|EB+Garamond|IM+Fell+English+SC|Josefin+Sans" rel="stylesheet">
 		<link href="shared_styles.css" rel="stylesheet">
-		<title>Worlds Adrift</title>
+		<title>Worlds Adrift Science</title>
 		<link rel="shortcut icon" href="favicon.ico" />
 		
 	</head>
