--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 				<a href="https://worldsadrift.gamepedia.com/Resources" class="lnk">Official Wiki Post</a><br />
 				<a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSp_I2pWc9NEfgrpQ1Lnylm162GFvpnseivxqUVq_WaAZBlhDce8LrQH4Mp0_Fe8QK0g9Ktd3SM0YaN/pubhtml" class="lnk">Metal Weight / Durabilities</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="lnk" style="color:#889;border: 2px solid #889; padding: 3px 4px 0">OC</a><br />
+				<a href="https://docs.google.com/spreadsheets/d/18o8VTXvd_qWldaz-uKFZxjUZOQqlLV2zSqYiFix1cPo/edit#gid=770704650" class="lnk">Chart by DemoDraco</a> &nbsp;&nbsp;&nbsp;&nbsp;<a class="lnk" style="color:white;background:#ede189; padding: 5px 14px 2px" title="Content may be out of date">!</a><br />
 				
 			</p>
 		</span>
@@ -55,5 +56,6 @@
 
 
 
-<!-- &nbsp;&nbsp;&nbsp;&nbsp;<a class="lnk" style="color:white;background:#ede189; padding: 5px 14px 2px" title="Content may be out of date">!</a><br /> -->
+<!--  -->
 </body></html>
+
