--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
     <title>WAS Phase 2</title>
-    <link rel="stylesheet" href="shared-styles.css">
+    <link rel="stylesheet" href="wait-page.css">
    </head>
-   <body>
+   <body data-tilt data-tilt-glare data-tilt-max-glare="0.8">
      <center>
       <h1>Welcome to Worlds Adrift: Phase 2.</h1>
       <p>We're hard at work upgrading the site for the newest game features! Stay tuned...</p>
      </center>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.6.1/vanilla-tilt.js"></script>
    </body>
 </html>
