--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>WAS Phase 2</title>
     <link rel="stylesheet" href="wait-page.css">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
    </head>
    <body data-tilt data-tilt-glare data-tilt-max-glare="0.8">
      <center>
