--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <link rel="stylesheet" href="wait-page.css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
    </head>
-   <body data-tilt data-tilt-glare data-tilt-max-glare="0.8">
-     <center>
-      <h1>Welcome to Worlds Adrift: Phase 2.</h1>
-      <p>We're hard at work upgrading the site for the newest game features! Stay tuned...</p>
-     </center>
+   <body>
+     <div class="main" data-tilt data-tilt-glare data-tilt-max-glare="0.8">
+      <center>
+        <h1>Welcome to Worlds Adrift: Phase 2.</h1>
+        <p>We're hard at work upgrading the site for the newest game features! Stay tuned...</p>
+      </center>
+     </div>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.6.1/vanilla-tilt.js"></script>
    </body>
 </html>
