--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
    <body>
      <center>
        <h1>Welcome to Worlds Adrift: Phase 2.</h1>
-       <p>We're hard at work upgrading the site for the newest game features! Stay tuned...<br>P.S. If you find another site like this on, it's a fraud! We came first! Die, blasphemers!</p>
+       <p>We're hard at work upgrading the site for the newest game features! Stay tuned...<br>
+         <psmaller>P.S. If you find another site like this on, it's a fraud! We came first! Die, blasphemers!</psmaller></p>
      </center>
    </body>
 </html>
