--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>WAS Phase 2</title>
+    <title>Under Construction!</title>
     <link rel="stylesheet" href="wait-page.css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
    </head>
@@ -8,7 +8,7 @@
      <center>
        <h1>Welcome to Worlds Adrift: Phase 2.</h1>
        <p>We're hard at work upgrading the site for the newest game features! Stay tuned...<br>
-         <psmaller>P.S. If you find another site like this on, it's a fraud! We came first! Die, blasphemers!</psmaller></p>
+         <psmaller>P.S. If you find another site like this one, it's a fraud! We came first! Die, blasphemers!</psmaller></p>
      </center>
    </body>
 </html>
