Archived old content and worked on beta

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    </head>
    <body>
      <center>
-       <h1>Welcome to Worlds Adrift: Phase 2.</h1>
+       <h1 class="h1-wait">Welcome to Worlds Adrift: Phase 2.</h1>
        <p>We're hard at work upgrading the site for the newest game features! Stay tuned...<br>
          <psmaller>P.S. If you find another site like this one, it's a fraud! We came first! Die, blasphemers!</psmaller></p>
      </center>
