images for rebus (discord bot) demo.

--- a/beta.html
+++ b/beta.html
@@ -46,6 +46,12 @@
           <li><a onclick="return show('Bot', 'Charts', 'Home', 'Donate');" class="active">Discord Bot</a></li>
           <li><a onclick="return show('Donate', 'Charts', 'Home', 'Bot');">Donate</a></li>
         </ul>
+        <img src="images/logo-main.png" width="50%" class="image-logo">
+        <br /><br />
+        <h1>Rebus Discord Bot</h1>
+        <img src="images/rebus-speed.png" width="18%" class="image-demo">
+        <br />
+        <img src="images/rebus-fuel.png" width="18%" class="image-demo">
       </div>
 
       <div id="Donate" style="display:none">
