--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Under Construction!</title>
-    <link rel="stylesheet" href="wait-page.css">
+    <link rel="stylesheet" href="main-styles.css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
    </head>
    <body>
