--- a/beta.html
+++ b/beta.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>WAS Home</title>
@@ -18,51 +19,68 @@
     <center>
       <div id="Home">
         <ul>
-          <li><a onclick="return show('Home', 'Charts', 'Bot', 'Donate');" class="active">Home</a></li>
-          <li><a onclick="return show('Charts', 'Home', 'Bot', 'Donate');">Charts</a></li>
-          <li><a onclick="return show('Bot', 'Charts', 'Home', 'Donate');">Discord Bot</a></li>
-          <li><a onclick="return show('Donate', 'Charts', 'Home', 'Bot');">Donate</a></li>
+          <li><a onclick="return show('Home', 'Resources', 'Bot', 'Donate');" class="active">Home</a></li>
+          <li><a onclick="return show('Resources', 'Home', 'Bot', 'Donate');">Resources</a></li>
+          <li><a onclick="return show('Bot', 'Resources', 'Home', 'Donate');">Discord Bot</a></li>
+          <li><a onclick="return show('Donate', 'Resources', 'Home', 'Bot');">Donate</a></li>
         </ul>
         <img src="images/logo-main.png" width="50%" class="image-logo">
         <br /><br />
         <h1>Welcome to worldsadrift.science!</h1>
-        <p style="text-align:justify;">This site is dedicated to the inner workings of Worlds Adrift. Here, you can find a compilation of resources and charts detailing materials, game mechanics and more!<br /><br />
-          Calculators have been moved a Discord bot for greater accessibility. With luck, it'll be on the Worlds Adrift Discord eventually but for now it can be invited on the <a href="#" onclick="return show('Bot', 'Home', 'Charts', 'Donate');">Bot</a> page!</p>
+        <p style="text-align:justify;">This site is dedicated to the inner workings of Worlds Adrift. Here, you can find a compilation of resources and Resources detailing materials, game mechanics and more!<br /><br />
+          Calculators have been moved a Discord bot for greater accessibility. With luck, it'll be on the Worlds Adrift Discord eventually but for now it can be invited on the <a href="#" onclick="return show('Bot', 'Home', 'Resources', 'Donate');">Bot</a> page!</p>
       </div>
 
-      <div id="Charts" style="display:none">
+      <div id="Resources" style="display:none">
         <ul>
-          <li><a onclick="return show('Home', 'Charts', 'Bot', 'Donate');">Home</a></li>
-          <li><a onclick="return show('Charts', 'Home', 'Bot', 'Donate');" class="active">Charts</a></li>
-          <li><a onclick="return show('Bot', 'Charts', 'Home', 'Donate');">Discord Bot</a></li>
-          <li><a onclick="return show('Donate', 'Charts', 'Home', 'Bot');">Donate</a></li>
+          <li><a onclick="return show('Home', 'Resources', 'Bot', 'Donate');">Home</a></li>
+          <li><a onclick="return show('Resources', 'Home', 'Bot', 'Donate');" class="active">Resources</a></li>
+          <li><a onclick="return show('Bot', 'Resources', 'Home', 'Donate');">Discord Bot</a></li>
+          <li><a onclick="return show('Donate', 'Resources', 'Home', 'Bot');">Donate</a></li>
         </ul>
+        <img src="images/logo-main.png" width="50%" class="image-logo">
+        <br /><br />
+        <h1>Resources</h1>
+        <p style="margin:0!important">Free charts! Get your charts here!</p><br />
+        <div class="collapsed">
+          <h2>Engines</h2><br />
+          <a href="https://docs.google.com/spreadsheets/d/1HWwusbRuvW3Pn-kol5VlUQwX44MtkD0EKLDJXkDzUv8/edit#gid=718522703">Engine Parts - Machine Maker</a><br /><br />
+          <a href="images/fc2">Fuel consumption graph - Ziwix</a><br /><br />
+          <a href="#" onclick="return show('Bot', 'Home', 'Resources', 'Donate');">Fuel consumption + overheat calculator moved to Rebus</a>
+        </div>
+        <div class="collapsed">
+          <h2>Cannons / Swivels</h2><br />
+          <a href="https://docs.google.com/spreadsheets/d/1LPgi48pQLU5WaoYOV8WCdr3CR1ki0KyhwYdT5iSvfTA/edit#gid=1757901782">Cannon + swivel science - Machine Maker</a><br /><br />
+          <a href="https://docs.google.com/spreadsheets/d/17WPEuZd3cNRiFnAHbV1cNkfkGFZPS4cE9UhNepsfF_Q/edit">Cannon parts - Machine Maker</a><br /><br />
+          
+        </div>
       </div>
 
       <div id="Bot" style="display:none">
         <ul>
-          <li><a onclick="return show('Home', 'Charts', 'Bot', 'Donate');">Home</a></li>
-          <li><a onclick="return show('Charts', 'Home', 'Bot', 'Donate');">Charts</a></li>
-          <li><a onclick="return show('Bot', 'Charts', 'Home', 'Donate');" class="active">Discord Bot</a></li>
-          <li><a onclick="return show('Donate', 'Charts', 'Home', 'Bot');">Donate</a></li>
+          <li><a onclick="return show('Home', 'Resources', 'Bot', 'Donate');">Home</a></li>
+          <li><a onclick="return show('Resources', 'Home', 'Bot', 'Donate');">Resources</a></li>
+          <li><a onclick="return show('Bot', 'Resources', 'Home', 'Donate');" class="active">Discord Bot</a></li>
+          <li><a onclick="return show('Donate', 'Resources', 'Home', 'Bot');">Donate</a></li>
         </ul>
         <img src="images/logo-main.png" width="50%" class="image-logo">
         <br /><br />
         <h1>Rebus Discord Bot</h1>
-        <img src="images/rebus-speed.png" width="18%" class="image-demo">
-        <br />
-        <img src="images/rebus-fuel.png" width="18%" class="image-demo">
+        <p><a href="#demo">See Rebus in action</a></p>
+        <img id="demo" data-tilt data-tilt-reverse="true" data-tilt-scale="1.04" data-tilt-easing="cubic-bezier(.03,.98,.52,.99)" data-tilt-perspective="2500" src="images/rebus-demo-512.gif" width="20%" class="image-demo">
+        <p style="color:#333"><psmaller>Fuel consumption, airspeed, and engine overheat calculators.</psmaller><br />More on the way.<br><a href="https://discordapp.com/oauth2/authorize?client_id=506142527745949716&scope=bot&permissions=67111936">Invite Rebus to your server</a></p>
+
       </div>
 
       <div id="Donate" style="display:none">
         <ul>
-          <li><a onclick="return show('Home', 'Charts', 'Bot', 'Donate');">Home</a></li>
-          <li><a onclick="return show('Charts', 'Home', 'Bot', 'Donate');">Charts</a></li>
-          <li><a onclick="return show('Bot', 'Charts', 'Home', 'Donate');">Discord Bot</a></li>
-          <li><a onclick="return show('Donate', 'Charts', 'Home', 'Bot');" class="active">Donate</a></li>
+          <li><a onclick="return show('Home', 'Resources', 'Bot', 'Donate');">Home</a></li>
+          <li><a onclick="return show('Resources', 'Home', 'Bot', 'Donate');">Resources</a></li>
+          <li><a onclick="return show('Bot', 'Resources', 'Home', 'Donate');">Discord Bot</a></li>
+          <li><a onclick="return show('Donate', 'Resources', 'Home', 'Bot');" class="active">Donate</a></li>
         </ul>
       </div>
-
     </center>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.6.1/vanilla-tilt.js"></script>
    </body>
 </html>
