Completely reworked and added up-to-date calculators!

--- a/bot.html
+++ b/bot.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>WAS Home</title>
+    <title>WAS Calculators</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="rework-styles.css">
@@ -11,21 +11,18 @@
 
 <body>
     <div class="w3-bar w3-large w3-teal">
-        <a class="w3-bar-item w3-button w3-mobile navbar active">Home</a>
+        <a href="index.html" class="w3-bar-item w3-button w3-mobile navbar">Home</a>
         <a href="resources.html" class="w3-bar-item w3-button w3-mobile navbar">Resources</a>
         <a href="calculators.html" class="w3-bar-item w3-button w3-mobile navbar">Calculators</a>
-        <a href="bot.html" class="w3-bar-item w3-button w3-mobile navbar">Bot</a>
+        <a class="w3-bar-item w3-button w3-mobile navbar active">Bot</a>
         <a href="donate.html" class="w3-bar-item w3-button w3-mobile navbar">Donate</a>
     </div>
     <div class="w3-container w3-center w3-cell-middle">
-        <h1 style="margin-top:8vw;font-size:4vh;" class="w3-text-teal">Welcome to worldsadrift.science!</h1>
+        <h1 style="margin-top:8vw;font-size:4vh;" class="w3-text-teal">🚧 This page is under construction!</h1>
         <div class="w3-row">
             <div class="w3-third w3-container">
             </div>
             <div class="w3-third w3-container">
-                <p class="w3-large w3-justify">
-                    This site is dedicated to the inner workings of Worlds Adrift. Here, you can find a compilation of resources and resources detailing materials, game mechanics and more!<br /><br />Calculators are still available on this site, but they have also been ported a Discord bot for greater accessibility. It's avilable on the official Worlds Adrift Discord and can also be invited to independant servers on the Bot page!
-                </p>
             </div>
             <div class="w3-third w3-container">
             </div>
