Embed code for airspeed calculator

--- a/bot.html
+++ b/bot.html
@@ -11,7 +11,7 @@
 
       gtag('config', 'UA-80123550-2');
     </script>
-    <title>WAS Calculators</title>
+    <title>WAS Bot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="rework-styles.css">
