--- a/calculators.html
+++ b/calculators.html
@@ -49,7 +49,7 @@
                             <input class="w3-input w3-light-grey" type="text" disabled id="airspeedOut" placeholder="Output">
                         </div>
                         <footer class="w3-container w3-teal">
-                            <p><a>Embed this calculator (Coming soon)</a></p>
+                            <p><a href="embed.html">Embed this calculator</a></p>
                         </footer>
                     </div>
                 </div>
