Updated embed syntax

--- a/embed.html
+++ b/embed.html
@@ -24,7 +24,7 @@
         <div class="w3-row">
             <div class="w3-third w3-container w3-left-align">
                 <h2 class="w3-text-teal">Airspeed embed code</h2>
-                <div class="w3-code htmlHigh" style="width:50%;">
+                <div class="w3-code htmlHigh" style="width:50%;border-left:4px solid #009688 !important;">
                     &lt;iframe src="scripts/embed-airspeed.html" width="400" height="300" frameborder="1"&gt;&lt;/iframe&gt;
                 </div>
                 <h3 class="w3-text-teal">Preview:</h3>
