Updates to embed code

--- a/calculators.html
+++ b/calculators.html
@@ -45,8 +45,8 @@
                 <button onclick="document.getElementById('overheat').style.display='block'" class="w3-button w3-text-teal navbar w3-large calcBtn">Engine overheat calculator</button><br />
                 <button onclick="document.getElementById('fuel').style.display='block'" class="w3-button w3-text-teal navbar w3-large calcBtn">Fuel consumption calculator</button>
                 <div id="airspeed" class="w3-modal">
-                    <div class="w3-modal-content w3-animate-top">
-                        <header class="w3-container w3-teal">
+                    <div class="w3-modal-content w3-left-align w3-animate-top">
+                        <header class="w3-container w3-text-teal">
                             <span onclick="document.getElementById('airspeed').style.display='none'" class="w3-button w3-display-topright">&times;</span>
                             <h2>Airspeed calculator</h2>
                         </header>
@@ -55,14 +55,14 @@
                             <input class="w3-input" type="text" id="airspeedPower" placeholder="Total engine power">
                             <input class="w3-input w3-light-grey" type="text" disabled id="airspeedOut" placeholder="Output">
                         </div>
-                        <footer class="w3-container w3-teal">
+                        <footer class="w3-container w3-text-teal">
                             <p><a href="embed.html">Embed this calculator</a></p>
                         </footer>
                     </div>
                 </div>
                 <div id="overheat" class="w3-modal">
-                    <div class="w3-modal-content w3-animate-top">
-                        <header class="w3-container w3-teal">
+                    <div class="w3-modal-content w3-left-align w3-animate-top">
+                        <header class="w3-container w3-text-teal">
                             <span onclick="document.getElementById('overheat').style.display='none'" class="w3-button w3-display-topright">&times;</span>
                             <h2>Engine overheat calculator</h2>
                         </header>
@@ -72,14 +72,14 @@
                             <input class="w3-input" type="text" id="overheatCool" placeholder="Engine cooling factor">
                             <input class="w3-input w3-light-grey" type="text" disabled id="overheatOut" placeholder="Output">
                         </div>
-                        <footer class="w3-container w3-teal">
+                        <footer class="w3-container w3-text-teal">
                             <p><a>Embed this calculator (Coming soon)</a></p>
                         </footer>
                     </div>
                 </div>
                 <div id="fuel" class="w3-modal">
-                    <div class="w3-modal-content w3-animate-top">
-                        <header class="w3-container w3-teal">
+                    <div class="w3-modal-content w3-left-align w3-animate-top">
+                        <header class="w3-container w3-text-teal">
                             <span onclick="document.getElementById('fuel').style.display='none'" class="w3-button w3-display-topright">&times;</span>
                             <h2>Fuel consumption calculator</h2>
                         </header>
@@ -91,7 +91,7 @@
                             </div>
                             <input class="w3-input w3-light-grey" type="text" disabled id="fuelOut" placeholder="Output">
                         </div>
-                        <footer class="w3-container w3-teal">
+                        <footer class="w3-container w3-text-teal">
                             <p><a>Embed this calculator (Coming soon)</a></p>
                         </footer>
                     </div>
