--- a/embed.html
+++ b/embed.html
@@ -25,10 +25,11 @@
             <div class="w3-third w3-container w3-left-align">
                 <h2 class="w3-text-teal">Airspeed embed code</h2>
                 <div class="w3-code htmlHigh" style="width:50%;border-left:4px solid #009688 !important;">
-                    &lt;iframe src="http://worldsadrift.science/scripts/embed-airspeed.html" width="400" height="300" frameborder="1"&gt;&lt;/iframe&gt;
+                    &lt;iframe src="http://worldsadrift.science/scripts/embed-airspeed.html" width="600" height="400"&gt;&lt;/iframe&gt;
                 </div>
+                <p>Embed code only works on non-https websites!<br />This will be fixed as soon as possible.</p>
                 <h3 class="w3-text-teal">Preview:</h3>
-                <iframe src="scripts/embed-airspeed.html" width="400" height="300" frameborder="1" ></iframe>
+                <iframe src="http://worldsadrift.science/scripts/embed-airspeed.html" width="600" height="374" frameborder="0"></iframe>
             </div>
             <div class="w3-third w3-container">
             </div>
