--- a/scripts/embed-airspeed.html
+++ b/scripts/embed-airspeed.html
@@ -3,22 +3,23 @@
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-80123550-2"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
 
-          gtag('config', 'UA-80123550-2');
-        </script>
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-80123550-2');
+    </script>
     <title>WAS Calculators</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="rework-styles.css">
+    <link rel="stylesheet" href="../rework-styles.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <script type="text/javascript" src="airspeed.js"></script>
 </head>
 
 <body>
-    <div class="w3-modal-content">
+    <div class="w3-container w3-light-grey w3-shadow">
         <header class="w3-container w3-text-teal">
             <h2 style="margin-top:28px;padding:4px;">Airspeed calculator</h2>
         </header>
