added a was discord link

--- a/resources.html
+++ b/resources.html
@@ -87,6 +87,7 @@
             </div>
         </div>
     </div>
+    <footer class="w3-container w3-display-bottommiddle w3-text-teal"><h3>Developed by query in partnership with <a href="https://discord.gg/5DhwptR">the WAS group</a></h3></footer>
     <script src="shared-scripts.js"></script>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Footer ads -->
