--- a/donate.html
+++ b/donate.html
@@ -37,6 +37,7 @@
             </div>
         </div>
     </div>
+    <footer class="w3-container w3-display-bottommiddle w3-text-teal"><h3>Developed by query in partnership with <a href="https://discord.gg/5DhwptR">the WAS group</a></h3></footer>
 </body>
 
 </html>
