--- a/index.html
+++ b/index.html
@@ -40,24 +40,14 @@
             <div class="w3-third w3-container">
                 <p class="w3-large w3-justify">
                     This site is dedicated to the inner workings of Worlds Adrift. Here, you can find a compilation of resources and resources detailing materials, game mechanics and more!<br /><br />Calculators are still available on this site, but they have also been ported a Discord bot for greater accessibility. It's avilable on the official Worlds Adrift Discord and can also be invited to independant servers on the Bot page!
+
+                    P.S. This site is developed by query in partnership with the WAS Discord group. Check them out <a href="https://discord.gg/5DhwptR">here!</a>
                 </p>
             </div>
             <div class="w3-third w3-container">
             </div>
         </div>
     </div>
-    <footer class="w3-container w3-display-bottommiddle w3-text-teal"><h3>Developed by query in partnership with <a href="https://discord.gg/5DhwptR">the WAS group</a></h3></footer>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Footer ads -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-2926029810096596"
-         data-ad-slot="1313130569"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
 </body>
 
 </html>
